  * Add the ld.lld manpage
  * Add Provides on python-lldb-x.y & python-clang-x.y & libllvm-x.y-ocaml-dev
    to avoid the recurring problem about conflicts
    (Closes: #835546, #863739, #863742)
  * Standards-Version => 4.0.0
  * Generate the llvm-tblgen, clang-change-namespace, clang-offload-bundler
    lld, clang++, clang-check, clang-cpp & clang-import-test manpages

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 14 Jun 2017 19:06:20 +0200

llvm-toolchain-4.0 (1:4.0.1~+rc3-1) unstable; urgency=medium

  [ Sylvestre Ledru ]
  * Try to fix polly on hurd (missing PATH_MAX)
  * New snapshot release

  [ Gianfranco Costamagna ]
  * Fix clang-doc generation
    - there was a missing install file

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 14 Jun 2017 09:59:59 +0200

llvm-toolchain-4.0 (1:4.0.1~+rc2-1) unstable; urgency=medium

  * New snapshot release
  * Remove clang-tblgen from clang-X.Y (done by upstream)

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 01 Jun 2017 23:01:38 +0200

llvm-toolchain-4.0 (1:4.0.1~+rc1-2) unstable; urgency=medium

  * Only enable libfuzzer for Linux kernel.
    Thanks to Pino Toscano for the patch

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 06 May 2017 10:03:14 +0200

llvm-toolchain-4.0 (1:4.0.1~+rc1-1) unstable; urgency=medium

  * New snapshot release

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 05 May 2017 09:44:42 +0200

llvm-toolchain-4.0 (1:4.0-5) unstable; urgency=medium

  * Really fix "use versioned symbols" for llvm
    Thanks to Julien Cristau for the patch (Closes: #849098)
  * Prepare version 4.0.1
  * Tolerate if ocaml failed
  * Just like with snapshot, add libncurses in the list of build deps
    (Closes: #861170)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 25 Apr 2017 13:32:25 +0200

llvm-toolchain-4.0 (1:4.0-4) unstable; urgency=medium

  * Limit the archs where the ocaml binding is built
    Should fix the FTBFS
    Currently amd64 arm64 armel armhf i386
